test/sema/typeck/method/call-generic-multiple.dora
trait TraitA { fn id(); }
trait TraitB { fn id(); }
fn f[T: TraitA + TraitB](t: T) { t.id(); }
